# astropy_xisf

./: LICENSE.rst  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/xisf/: index.rst
xisf/example_subpkg/: setup_package.py
