[metadata]
name = xisf
author = Cédric Foellmi (@onekiloparsec)
author_email = cedric@onekiloparsec.dev
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/onekiloparsec/astropy_xisf
description = Basic support for reading and writing XISF files
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = onekiloparsec/astropy_xisf

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
xisf = data/*

[tool:pytest]
testpaths = "xisf" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    xisf/_astropy_init*
    xisf/conftest.py
    xisf/*setup_package*
    xisf/tests/*
    xisf/*/tests/*
    xisf/extern/*
    xisf/version*
    */xisf/_astropy_init*
    */xisf/conftest.py
    */xisf/*setup_package*
    */xisf/tests/*
    */xisf/*/tests/*
    */xisf/extern/*
    */xisf/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
